; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_emit_fdivs.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/sh2_dynarec/extr_assem_arm.c_emit_fdivs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [19 x i8] c"fdivs s%d,s%d,s%d\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @emit_fdivs(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @assem_debug(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0), i32 %7, i32 %8, i32 %9)
  %11 = load i32, i32* %6, align 4
  %12 = and i32 %11, 14
  %13 = shl i32 %12, 11
  %14 = or i32 -293598720, %13
  %15 = load i32, i32* %6, align 4
  %16 = and i32 %15, 1
  %17 = shl i32 %16, 22
  %18 = or i32 %14, %17
  %19 = load i32, i32* %4, align 4
  %20 = and i32 %19, 14
  %21 = shl i32 %20, 15
  %22 = or i32 %18, %21
  %23 = load i32, i32* %4, align 4
  %24 = and i32 %23, 1
  %25 = shl i32 %24, 7
  %26 = or i32 %22, %25
  %27 = load i32, i32* %5, align 4
  %28 = and i32 %27, 14
  %29 = ashr i32 %28, 1
  %30 = or i32 %26, %29
  %31 = load i32, i32* %5, align 4
  %32 = and i32 %31, 1
  %33 = shl i32 %32, 5
  %34 = or i32 %30, %33
  %35 = call i32 @output_w32(i32 %34)
  ret void
}

declare dso_local i32 @assem_debug(i8*, i32, i32, i32) #1

declare dso_local i32 @output_w32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
